# sciloc

./: .gitignore  data.txt  predefined.py  pyproject.toml  sciloc.py
